--- a/src/CSimple/App.xaml
+++ b/src/CSimple/App.xaml
@@ -4,151 +4,132 @@
              xmlns:page="clr-namespace:CSimple.Pages"
              x:Class="CSimple.App">
     <Application.Resources>
-        <ResourceDictionary Source="Resources/Styles/DefaultTheme.xaml" />
+        <ResourceDictionary Source="Resources/Styles/DefaultTheme.xaml"/>
     </Application.Resources>
+
     <Application.MainPage>
-        <Shell FlyoutWidth="200"
-               FlyoutBackgroundColor="{StaticResource Background_Mid}"
-               FlyoutBehavior="Flyout">
-            <!-- Desktop/Tablet -->
-            <FlyoutItem Title="Home"
-                        Route="home"
-                        Style="{StaticResource HomeFlyout}">
-                <ShellContent ContentTemplate="{DataTemplate page:HomePage}" />
+        <Shell 
+            FlyoutWidth="200" 
+            FlyoutBackgroundColor="{StaticResource Background_Mid}"
+            FlyoutBehavior="Flyout">
+
+            <!-- Desktop/Tablet-->
+            <FlyoutItem Title="Home" Route="home" Style="{StaticResource HomeFlyout}">
+                <ShellContent ContentTemplate="{DataTemplate page:HomePage}"/>
             </FlyoutItem>
-            <FlyoutItem Title="Favorites"
-                        Route="favorites"
-                        FlyoutItemIsVisible="False">
-                <ShellContent ContentTemplate="{DataTemplate page:FavoritesPage}" />
+            <FlyoutItem Title="Favorites" Route="favorites" FlyoutItemIsVisible="False">
+                <ShellContent ContentTemplate="{DataTemplate page:FavoritesPage}"/>
             </FlyoutItem>
-            <FlyoutItem Title="Net"
-                        Route="net"
-                        Style="{StaticResource NetFlyout}">
-                <ShellContent ContentTemplate="{DataTemplate page:NetPage}" />
+            <FlyoutItem Title="Net" Route="net" Style="{StaticResource NetFlyout}">
+                <ShellContent ContentTemplate="{DataTemplate page:NetPage}"/>
             </FlyoutItem>
-            <FlyoutItem Title="Map"
-                        Route="map"
-                        FlyoutItemIsVisible="False">
-                <ShellContent ContentTemplate="{DataTemplate page:MapPage}" />
+            <FlyoutItem Title="Map" Route="map" FlyoutItemIsVisible="False">
+                <ShellContent ContentTemplate="{DataTemplate page:MapPage}"/>
             </FlyoutItem>
-            <FlyoutItem Title="About"
-                        Route="about"
-                        FlyoutItemIsVisible="False">
-                <ShellContent ContentTemplate="{DataTemplate page:AboutPage}" />
+            <FlyoutItem Title="About" Route="about" FlyoutItemIsVisible="False">
+                <ShellContent ContentTemplate="{DataTemplate page:AboutPage}"/>
             </FlyoutItem>
-            <FlyoutItem Title="Observe"
-                        Route="observe"
-                        Style="{StaticResource ObserveFlyout}">
-                <ShellContent ContentTemplate="{DataTemplate page:ObservePage}" />
+            <FlyoutItem Title="Observe" Route="observe" Style="{StaticResource ObserveFlyout}">
+                <ShellContent ContentTemplate="{DataTemplate page:ObservePage}"/>
             </FlyoutItem>
-            <FlyoutItem Title="Orient"
-                        Route="orient"
-                        Style="{StaticResource OrientFlyout}">
-                <ShellContent ContentTemplate="{DataTemplate page:OrientPage}" />
+            <FlyoutItem Title="Orient" Route="orient" Style="{StaticResource OrientFlyout}">
+                <ShellContent ContentTemplate="{DataTemplate page:OrientPage}"/>
             </FlyoutItem>
-            <FlyoutItem Title="Goal"
-                        Route="goal"
-                        Style="{StaticResource GoalFlyout}">
-                <ShellContent ContentTemplate="{DataTemplate page:GoalPage}" />
+            <FlyoutItem Title="Goal" Route="goal" Style="{StaticResource GoalFlyout}">
+                <ShellContent ContentTemplate="{DataTemplate page:GoalPage}"/>
             </FlyoutItem>
-            <FlyoutItem Title="Plan"
-                        Route="plan"
-                        Style="{StaticResource PlanFlyout}">
-                <ShellContent ContentTemplate="{DataTemplate page:PlanPage}" />
+            <FlyoutItem Title="Plan" Route="plan" Style="{StaticResource PlanFlyout}">
+                <ShellContent ContentTemplate="{DataTemplate page:PlanPage}"/>
             </FlyoutItem>
-            <FlyoutItem Title="Action"
-                        Route="action"
-                        Style="{StaticResource ActionFlyout}">
-                <ShellContent ContentTemplate="{DataTemplate page:ActionPage}" />
+            <FlyoutItem Title="Action" Route="action" Style="{StaticResource ActionFlyout}">
+                <ShellContent ContentTemplate="{DataTemplate page:ActionPage}"/>
             </FlyoutItem>
-            <FlyoutItem Title="Contact"
-                        Route="contact"
-                        FlyoutItemIsVisible="False">
-                <ShellContent ContentTemplate="{DataTemplate page:ContactPage}" />
+            <FlyoutItem Title="Contact" Route="contact" FlyoutItemIsVisible="False">
+                <ShellContent ContentTemplate="{DataTemplate page:ContactPage}"/>
             </FlyoutItem>
-            <FlyoutItem Title="Login"
-                        Route="login"
-                        FlyoutItemIsVisible="False">
-                <ShellContent ContentTemplate="{DataTemplate page:LoginPage}" />
+            <FlyoutItem Title="Login" Route="login" FlyoutItemIsVisible="False">
+                <ShellContent ContentTemplate="{DataTemplate page:LoginPage}"/>
             </FlyoutItem>
-            <FlyoutItem Title="Privacy"
-                        Route="privacy"
-                        FlyoutItemIsVisible="False">
-                <ShellContent ContentTemplate="{DataTemplate page:PrivacyPage}" />
+            <FlyoutItem Title="Privacy" Route="privacy" FlyoutItemIsVisible="False">
+                <ShellContent ContentTemplate="{DataTemplate page:PrivacyPage}"/>
             </FlyoutItem>
-            <FlyoutItem Title="Terms"
-                        Route="terms"
-                        FlyoutItemIsVisible="False">
-                <ShellContent ContentTemplate="{DataTemplate page:TermsPage}" />
+            <FlyoutItem Title="Terms" Route="terms" FlyoutItemIsVisible="False">
+                <ShellContent ContentTemplate="{DataTemplate page:TermsPage}"/>
             </FlyoutItem>
-            <FlyoutItem Title="Settings"
-                        Route="settings"
-                        Style="{StaticResource SettingsFlyout}">
-                <ShellContent ContentTemplate="{DataTemplate page:SettingsPage}" />
+            <FlyoutItem Title="Settings" Route="settings" Style="{StaticResource SettingsFlyout}">
+                <ShellContent ContentTemplate="{DataTemplate page:SettingsPage}"/>
             </FlyoutItem>
+
             <!-- Phone -->
             <TabBar x:Name="PhoneTabs">
-                <Tab Title="Home"
-                     Icon="tab_home.png">
-                    <ShellContent ContentTemplate="{DataTemplate page:HomePage}" />
+                <Tab Title="Home" Icon="tab_home.png">
+                    <ShellContent ContentTemplate="{DataTemplate page:HomePage}"/>
                 </Tab>
-                <Tab Title="Favorites"
-                     Icon="tab_favorites.png">
-                    <ShellContent ContentTemplate="{DataTemplate page:FavoritesPage}" />
+                <Tab Title="Favorites" Icon="tab_favorites.png">
+                    <ShellContent ContentTemplate="{DataTemplate page:FavoritesPage}"/>
                 </Tab>
-                <Tab Title="Map"
-                     Icon="tab_map.png">
-                    <ShellContent ContentTemplate="{DataTemplate page:MapPage}" />
+                <Tab Title="Map" Icon="tab_map.png">
+                    <ShellContent ContentTemplate="{DataTemplate page:MapPage}"/>
                 </Tab>
-                <Tab Title="Net"
-                     Icon="tab_net.png">
-                    <ShellContent ContentTemplate="{DataTemplate page:NetPage}" />
+                <Tab Title="Net" Icon="tab_net.png">
+                    <ShellContent ContentTemplate="{DataTemplate page:NetPage}"/>
                 </Tab>
-                <Tab Title="Settings"
-                     Icon="tab_settings.png">
-                    <ShellContent ContentTemplate="{DataTemplate page:SettingsPage}" />
+                <Tab Title="Settings" Icon="tab_settings.png">
+                    <ShellContent ContentTemplate="{DataTemplate page:SettingsPage}"/>
                 </Tab>
-                <Tab Title="About"
-                     Icon="tab_settings.png">
-                    <ShellContent ContentTemplate="{DataTemplate page:AboutPage}" />
+                <Tab Title="About" Icon="tab_settings.png">
+                    <ShellContent ContentTemplate="{DataTemplate page:AboutPage}"/>
                 </Tab>
-                <Tab Title="Contact"
-                     Icon="tab_settings.png">
-                    <ShellContent ContentTemplate="{DataTemplate page:ContactPage}" />
+
+                <Tab Title="Contact" Icon="tab_settings.png">
+                    <ShellContent ContentTemplate="{DataTemplate page:ContactPage}"/>
                 </Tab>
-                <Tab Title="Observe"
-                     Icon="tab_settings.png">
-                    <ShellContent ContentTemplate="{DataTemplate page:ObservePage}" />
+                <Tab Title="Observe" Icon="tab_settings.png">
+                    <ShellContent ContentTemplate="{DataTemplate page:ObservePage}"/>
                 </Tab>
-                <Tab Title="Orient"
-                     Icon="tab_settings.png">
-                    <ShellContent ContentTemplate="{DataTemplate page:OrientPage}" />
+                <Tab Title="Orient" Icon="tab_settings.png">
+                    <ShellContent ContentTemplate="{DataTemplate page:OrientPage}"/>
                 </Tab>
-                <Tab Title="Goal"
-                     Icon="tab_settings.png">
-                    <ShellContent ContentTemplate="{DataTemplate page:GoalPage}" />
+                <Tab Title="Goal" Icon="tab_settings.png">
+                    <ShellContent ContentTemplate="{DataTemplate page:GoalPage}"/>
                 </Tab>
-                <Tab Title="Plan"
-                     Icon="tab_settings.png">
-                    <ShellContent ContentTemplate="{DataTemplate page:PlanPage}" />
+                <Tab Title="Plan" Icon="tab_settings.png">
+                    <ShellContent ContentTemplate="{DataTemplate page:PlanPage}"/>
                 </Tab>
-                <Tab Title="Action"
-                     Icon="tab_settings.png">
-                    <ShellContent ContentTemplate="{DataTemplate page:ActionPage}" />
+                <Tab Title="Action" Icon="tab_settings.png">
+                    <ShellContent ContentTemplate="{DataTemplate page:ActionPage}"/>
                 </Tab>
-                <Tab Title="Login"
-                     Icon="tab_settings.png">
-                    <ShellContent ContentTemplate="{DataTemplate page:LoginPage}" />
+                <Tab Title="Login" Icon="tab_settings.png">
+                    <ShellContent ContentTemplate="{DataTemplate page:LoginPage}"/>
                 </Tab>
-                <Tab Title="Privacy"
-                     Icon="tab_settings.png">
-                    <ShellContent ContentTemplate="{DataTemplate page:PrivacyPage}" />
+                <Tab Title="Privacy" Icon="tab_settings.png">
+                    <ShellContent ContentTemplate="{DataTemplate page:PrivacyPage}"/>
                 </Tab>
-                <Tab Title="Terms"
-                     Icon="tab_settings.png">
-                    <ShellContent ContentTemplate="{DataTemplate page:TermsPage}" />
+                <Tab Title="Terms" Icon="tab_settings.png">
+                    <ShellContent ContentTemplate="{DataTemplate page:TermsPage}"/>
                 </Tab>
             </TabBar>
+            <Shell.ItemTemplate>
+                <DataTemplate>
+                    <Grid WidthRequest="150" HeightRequest="64"
+                        HorizontalOptions="Start" VerticalOptions="Center"
+                        ColumnDefinitions="Auto, 5, Auto" RowDefinitions="*, Auto, *">
+                        <BoxView HeightRequest="15" Grid.Row="0" Grid.ColumnSpan="3"/>
+                        <Image Source="{Binding FlyoutIcon}"
+                            VerticalOptions="Center"
+                            HorizontalOptions="Start"
+                            HeightRequest="34"
+                            WidthRequest="34"
+                            Grid.Row="1" Grid.Column="0"/>
+                        <Label Text="{Binding Title}"
+                            VerticalOptions="Center"
+                            HorizontalOptions="Start"
+                            WidthRequest="170"
+                            Grid.Row="1" Grid.Column="2"/>
+                        <BoxView HeightRequest="15" Grid.Row="2" Grid.ColumnSpan="3"/>
+                    </Grid>
+                </DataTemplate>
+            </Shell.ItemTemplate>
         </Shell>
     </Application.MainPage>
 </Application>
