--- a/src/CSimple/Pages/HomePage.xaml
+++ b/src/CSimple/Pages/HomePage.xaml
@@ -1,54 +1,57 @@
-﻿<ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:m="clr-namespace:CSimple.Models"
-             xmlns:v="clr-namespace:CSimple.Views"
-             xmlns:ios="clr-namespace:Microsoft.Maui.Controls.PlatformConfiguration.iOSSpecific;assembly=Microsoft.Maui.Controls"
-             ios:Page.UseSafeArea="True"
-             Shell.NavBarIsVisible="{OnPlatform True, MacCatalyst=False}"
-             x:Class="CSimple.Pages.HomePage"
-             x:Name="this">
+﻿<ContentPage
+    xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
+    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    xmlns:m="clr-namespace:CSimple.Models"
+    xmlns:v="clr-namespace:CSimple.Views"
+    xmlns:ios="clr-namespace:Microsoft.Maui.Controls.PlatformConfiguration.iOSSpecific;assembly=Microsoft.Maui.Controls"
+    ios:Page.UseSafeArea="True"
+    Shell.NavBarIsVisible="{OnPlatform True, MacCatalyst=False}"
+    x:Class="CSimple.Pages.HomePage"
+    x:Name="this">
+
     <ContentPage.MenuBarItems>
         <MenuBarItem Text="File">
-            <MenuFlyoutItem Text="Quit"
-                            Command="{Binding QuitCommand}" />
+            <MenuFlyoutItem Text="Quit" Command="{Binding QuitCommand}"/>
         </MenuBarItem>
         <MenuBarItem Text="Edit">
             <MenuFlyoutSubItem Text="Change Location">
-                <MenuFlyoutItem Text="Boston, MA" />
-                <MenuFlyoutItem Text="Redmond, WA" />
-                <MenuFlyoutItem Text="St. Louis, MO" />
+                <MenuFlyoutItem Text="Boston, MA"/>
+                <MenuFlyoutItem Text="Redmond, WA"/>
+                <MenuFlyoutItem Text="St. Louis, MO"/>
             </MenuFlyoutSubItem>
-            <MenuFlyoutItem Text="Add a Location"
-                            Command="{Binding AddLocationCommand}" />
-        </MenuBarItem>
+            <MenuFlyoutItem Text="Add a Location" Command="{Binding AddLocationCommand}"/>
+        </MenuBarItem> 
         <MenuBarItem Text="View">
-            <MenuFlyoutItem Text="Refresh"
-                            Command="{Binding RefreshCommand}" />
-            <MenuFlyoutItem Text="Toggle Light/Dark Mode"
-                            Command="{Binding ToggleModeCommand}" />
+            <MenuFlyoutItem Text="Refresh" Command="{Binding RefreshCommand}"/>
+            <MenuFlyoutItem Text="Toggle Light/Dark Mode" Command="{Binding ToggleModeCommand}"/>
         </MenuBarItem>
     </ContentPage.MenuBarItems>
+
     <Grid>
         <ScrollView Grid.Column="0">
-            <VerticalStackLayout Padding="{OnIdiom Phone='0,50',Default='0,50'}"
-                                 Spacing="{OnIdiom Phone=25,Default=50}">
-                <Label Text="Welcome to Simple!"
-                       FontSize="Title"
-                       HorizontalOptions="Center"
-                       VerticalOptions="StartAndExpand" />
-                <Button Text="Get Started"
-                        Command="{Binding NavigateCommand}"
-                        CommandParameter="login"
-                        HorizontalOptions="Center"
-                        VerticalOptions="CenterAndExpand" />
-                <FlexLayout IsVisible="{OnIdiom Phone=False, Default=True}"
-                            MinimumHeightRequest="360"
-                            AlignItems="Center"
-                            AlignContent="Center"
-                            JustifyContent="SpaceEvenly">
-                    <v:CurrentWidget WidthRequest="200" />
+            <VerticalStackLayout
+                Padding="{OnIdiom Phone='0,50',Default='0,50'}"
+                Spacing="{OnIdiom Phone=25,Default=50}">
+                <Label Text="Welcome to Simple!" 
+                    FontSize="Title" 
+                    HorizontalOptions="Center" 
+                    VerticalOptions="StartAndExpand"/>
+                <Button Text="Get Started" 
+                    Command="{Binding NavigateCommand}" 
+                    CommandParameter="LoginPage" 
+                    HorizontalOptions="Center" 
+                    VerticalOptions="CenterAndExpand"/>
+                <FlexLayout
+                    IsVisible="{OnIdiom Phone=False, Default=True}"
+                    MinimumHeightRequest="360"
+                    AlignItems="Center"
+                    AlignContent="Center"
+                    JustifyContent="SpaceEvenly">
+                    <v:CurrentWidget
+                        WidthRequest="200" />
                 </FlexLayout>
-                <v:CurrentWidget IsVisible="{OnIdiom Phone=True, Default=False}" />
+                <v:CurrentWidget
+                    IsVisible="{OnIdiom Phone=True, Default=False}"/>
                 <BoxView HeightRequest="1" />
             </VerticalStackLayout>
         </ScrollView>
